--- a/crm/package.json
+++ b/crm/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@tanstack/react-query": "^5.61.0",
+    "@tanstack/react-query-devtools": "^5.61.0",
+    "@tanstack/router-devtools": "^1.82.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "next": "15.0.3",
