--- a/crm/package.json
+++ b/crm/package.json
@@ -17,8 +17,8 @@
     "formik": "^2.4.6",
     "next": "15.0.3",
     "prettier": "^3.3.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
